Fix: Clipping text on mobile

--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,6 @@
       }
 
       .title-word {
-        display: inline-block;
         opacity: 0;
         margin-top: -90px;
       }
